# GoogleArmEMGMonitor

./: CMakeLists.txt  ErrorDef.h  GoogleArmEMGMonitor.pro  MyTime.h  README.md  RingBuffer.h  SshSession.h  TempFile.h  checkPID.sh  emgdatasource.cpp  emgdatasource.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  preferences.cpp  preferences.h  preferences.ui  qcustomplot.cpp  tcpsocket.cpp  tcpsocket.h
CoAmp/: CMakeLists.txt
CoAmp/Include/: CoAmp.h
CoAmp/Src/: CoAmp.cpp
Include/: Data.h  ErrorDef.h  MyTime.h  Util.h  pch.h
KeyLogger/: CMakeLists.txt
KeyLogger/Include/: KeyLogger.h
KeyLogger/Src/: KeyLogger.cpp
Logger/: CMakeLists.txt
Logger/Include/: Logger.h  spdlog_pch.h
Logger/Src/: Logger.cpp
RingBuffer/: CMakeLists.txt
RingBuffer/Include/: RingBuffer.h
RingBuffer/Src/: RingBuffer-impl.cpp  RingBuffer.cpp
Server/: CMakeLists.txt
Server/Include/: Server.h
Server/Src/: Server.cpp
TCPServer/: CMakeLists.txt
TCPServer/Include/: TCPServer.h
TCPServer/Src/: TCPServer.cpp
